un poquito mejor el random

--- a/my.kv
+++ b/my.kv
@@ -16,6 +16,9 @@
                 id:biterios
                 text: "4"
                 readonly:True
+                font_size: 32
+                halign:"center"
+                padding:[0,50,0,0]
             Button:
                 text:"4"
                 on_press:biterios.text="4"
