--- a/my.kv
+++ b/my.kv
@@ -1,45 +1,55 @@
 <MyLayout>
-
-    GridLayout:
-        cols:2
+    BoxLayout:
+        id:bigLayout
         size: root.width, root.height
-        
-        TextInput: 
-            id:pcho           
-            text:"Escribí tu Nonograma acá! Borrá este texto y lo que escribas se convertirá en el nonograma. Abajo elegís el tamaño! Y si querés, podés randomizar con el botón de la derecha"
-        Button:
-            text:"Randomizar"
-            on_release: root.randomizar()
-        GridLayout:
-            cols:4    
-            TextInput:
-                id:biterios
-                text: "4"
-                readonly:True
-                font_size: 32
-                halign:"center"
-                padding:[0,50,0,0]
-            Button:
-                text:"4"
-                on_press:biterios.text="4"
-            Button:
-                text:"5"
-                on_press:biterios.text="5"
-            Button:
-                text:"8"
-                on_press:biterios.text="8"
-            Button:
-                text:"10"
-                on_press:biterios.text="10"
-            Button:
-                text:"12"
-                on_press:biterios.text="12"
-            Button:
-                text:"15"
-                on_press:biterios.text="15"
-            Button:
-                text:"18"
-                on_press:biterios.text="18"
-        Button:
-            text:"Jugar"
-            on_press: root.jueguito()
+        orientation: 'horizontal'
+        Carousel:
+            direction: 'right'
+            loop:True
+            id:caroso
+            GridLayout:
+                cols:2
+                size: root.width, root.height
+                
+                TextInput: 
+                    id:pcho           
+                    text:"Escribí tu Nonograma acá! Borrá este texto y lo que escribas se convertirá en el nonograma. Abajo elegís el tamaño! Y si querés, podés randomizar con el botón de la derecha"
+                Button:
+                    text:"Randomizar"
+                    on_release: root.randomizar()
+                GridLayout:
+                    cols:4    
+                    TextInput:
+                        id:biterios
+                        text: "4"
+                        readonly:True
+                        font_size: 32
+                        halign:"center"
+                        padding:[0,50,0,0]
+                    Button:
+                        text:"4"
+                        on_press:biterios.text="4"
+                    Button:
+                        text:"5"
+                        on_press:biterios.text="5"
+                    Button:
+                        text:"8"
+                        on_press:biterios.text="8"
+                    Button:
+                        text:"10"
+                        on_press:biterios.text="10"
+                    Button:
+                        text:"12"
+                        on_press:biterios.text="12"
+                    Button:
+                        text:"15"
+                        on_press:biterios.text="15"
+                    Button:
+                        text:"18"
+                        on_press:biterios.text="18"
+                Button:
+                    text:"Jugar"
+                    on_press: root.jueguito()
+            BoxLayout:
+                orientation: 'vertical'
+                id:nonogram
