--- a/my.kv
+++ b/my.kv
@@ -13,7 +13,7 @@
                 
                 TextInput: 
                     id:pcho           
-                    text:"Escribí tu Nonograma acá! Borrá este texto y lo que escribas se convertirá en el nonograma. Abajo elegís el tamaño! Y si querés, podés randomizar con el botón de la derecha"
+                    text:"Escribí tu Nonograma acá! Borrá este texto y lo que escribas se convertirá en el nonograma. Abajo elegís el tamaño! Y si querés, podés randomizar con el botón de la derecha\nWrite your Nonogram here! Erase this text and whatever you write will become a nonogram. Choose the size with the numbers down below! If you want to, you can randomize the text with the button at the right."
                 Button:
                     text:"Randomizar"
                     on_release: root.randomizar()
